handmadecompiler/src/compilador/y.output
   0  $accept : programa $end

   1  programa : header_programa lista_sentencias END
   2           | header_programa lista_sentencias error

   3  header_programa : ID BEGIN
   4                  | ID error
   5                  | error BEGIN

   6  lista_sentencias : sentencia
   7                   | lista_sentencias sentencia

   8  sentencia : sentencia_declarativa
   9            | sentencia_ejecutable

  10  sentencia_declarativa : tipo lista_variables ';'
  11                        | TAG ';'
  12                        | TAG error
  13                        | tipo ID ';'
  14                        | tipo ID error
  15                        | ID ';'
  16                        | ID error
  17                        | lista_variables ';'
  18                        | header_funcion '(' parametro ')' BEGIN lista_sentencias END
  19                        | header_funcion '(' parametro ')' BEGIN error END
  20                        | header_funcion '(' error ')' BEGIN lista_sentencias END
  21                        | error '(' parametro ')' BEGIN lista_sentencias END
  22                        | struct ';'
  23                        | struct error
  24                        | tipo lista_variables error
  25                        | lista_variables error

  26  header_funcion : tipo FUN ID
  27                 | tipo FUN error

  28  tipo : UINTEGER
  29       | SINGLE

  30  parametro : tipo ID
  31            | tipo error
  32            | error ID

  33  sentencia_ejecutable : asignacion
  34                       | retorno
  35                       | invocacion_funcion
  36                       | seleccion_if
  37                       | imprimir
  38                       | repeat_until
  39                       | goto
  40                       | conversion_explicita

  41  asignacion : asignacion_simple
  42             | asignacion_multiple

  43  asignacion_simple : ID ASIGNACION expresion ';'
  44                    | ID ASIGNACION expresion error
  45                    | ID ASIGNACION error ';'
  46                    | ID_STRUCT '.' ID ASIGNACION expresion ';'
  47                    | ID_STRUCT '.' ID ASIGNACION error ';'
  48                    | ID_STRUCT '.' ID ASIGNACION expresion error

  49  asignacion_multiple : lista_variables ASIGNACION lista_expresiones ';'
  50                      | lista_variables ASIGNACION lista_expresiones error

  51  lista_variables : ID ',' ID
  52                  | ID_STRUCT '.' ID ',' ID_STRUCT '.' ID
  53                  | lista_variables ',' ID
  54                  | lista_variables ',' ID_STRUCT '.' ID
  55                  | ID ID
  56                  | ID '.' ID ID '.' ID
  57                  | lista_variables ID
  58                  | lista_variables ID '.' ID

  59  lista_expresiones : expresion ',' expresion
  60                    | lista_expresiones ',' expresion
  61                    | expresion error expresion
  62                    | error ',' expresion
  63                    | expresion ',' error

  64  retorno : RET '(' expresion ')' ';'
  65          | RET '(' expresion ')' error
  66          | RET '(' error ')' ';'

  67  expresion : expresion '+' termino
  68            | expresion '-' termino
  69            | expresion '+' error
  70            | expresion '-' error
  71            | error '+' termino
  72            | error '-' termino
  73            | error '+' error
  74            | error '-' error
  75            | termino

  76  termino : termino '*' factor
  77          | termino '/' factor
  78          | termino '*' error
  79          | termino '/' error
  80          | error '*' factor
  81          | error '/' factor
  82          | error '*' error
  83          | error '/' error
  84          | factor

  85  factor : ID
  86         | ID_STRUCT '.' ID
  87         | UINTEGER_CONST
  88         | SINGLE_CONST
  89         | HEXA_CONST
  90         | invocacion_funcion
  91         | '-' ID
  92         | '-' ID_STRUCT '.' ID
  93         | '-' SINGLE_CONST
  94         | '-' error

  95  invocacion_funcion : ID '(' expresion ')' ';'
  96                     | ID '(' error ')' ';'
  97                     | ID '(' expresion ')' error

  98  seleccion_if : IF '(' condicion ')' THEN bloque_sentencias END_IF ';'
  99               | IF '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'
 100               | IF '(' condicion ')' THEN bloque_sentencias END_IF error
 101               | IF '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF error
 102               | IF condicion ')' THEN bloque_sentencias END_IF ';'
 103               | IF '(' condicion THEN bloque_sentencias END_IF ';'
 104               | IF condicion THEN bloque_sentencias END_IF ';'
 105               | IF condicion ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'
 106               | IF '(' condicion THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'
 107               | IF condicion THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'
 108               | IF '(' condicion ')' THEN error END_IF ';'
 109               | IF '(' condicion ')' THEN error ELSE error END_IF ';'
 110               | IF '(' condicion ')' THEN bloque_sentencias ';'
 111               | IF '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ';'

 112  bloque_sentencias : BEGIN lista_sentencias_ejecutables END
 113                    | sentencia_ejecutable

 114  lista_sentencias_ejecutables : lista_sentencias_ejecutables sentencia_ejecutable
 115                               | sentencia_ejecutable

 116  condicion : expresion comparador expresion
 117            | expresion error expresion
 118            | error comparador expresion
 119            | expresion comparador error

 120  comparador : '='
 121             | DISTINTO
 122             | '<'
 123             | '>'
 124             | MENOR_IGUAL
 125             | MAYOR_IGUAL

 126  imprimir : OUTF '(' expresion ')' ';'
 127           | OUTF '(' CADENA ')' ';'
 128           | OUTF '(' expresion ')' error
 129           | OUTF '(' CADENA ')' error
 130           | OUTF '(' ')' ';'
 131           | OUTF '(' error ')' ';'

 132  repeat_until : REPEAT bloque_sentencias UNTIL '(' condicion ')' ';'
 133               | REPEAT bloque_sentencias '(' condicion ')' ';'
 134               | REPEAT bloque_sentencias UNTIL '(' condicion ')' error
 135               | REPEAT bloque_sentencias UNTIL condicion ')' ';'
 136               | REPEAT bloque_sentencias UNTIL '(' condicion ';'
 137               | REPEAT bloque_sentencias UNTIL condicion ';'
 138               | REPEAT error UNTIL '(' condicion ')' ';'

 139  struct : TYPEDEF bloque_struct_multiple ID
 140         | TYPEDEF bloque_struct_simple ID
 141         | TYPEDEF bloque_struct_multiple error
 142         | TYPEDEF bloque_struct_simple error

 143  bloque_struct_multiple : STRUCT '<' lista_tipos '>' BEGIN lista_variables END
 144                         | '<' lista_tipos '>' BEGIN lista_variables END
 145                         | STRUCT lista_tipos '>' BEGIN lista_variables END
 146                         | STRUCT '<' lista_tipos BEGIN lista_variables END

 147  bloque_struct_simple : STRUCT '<' tipo '>' BEGIN ID END
 148                       | '<' tipo '>' BEGIN ID END
 149                       | tipo '>' BEGIN ID END
 150                       | '<' tipo BEGIN ID END

 151  lista_tipos : lista_tipos ',' tipo
 152              | tipo ',' tipo

 153  goto : GOTO TAG ';'
 154       | GOTO TAG error
 155       | GOTO error ';'

 156  conversion_explicita : TOS '(' expresion ')' ';'
 157                       | TOS '(' expresion ')' error
 158                       | TOS '(' error ')' ';'

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	.  error

	programa  goto 3
	header_programa  goto 4


state 1
	header_programa : error . BEGIN  (5)

	BEGIN  shift 5
	.  error


state 2
	header_programa : ID . BEGIN  (3)
	header_programa : ID . error  (4)

	error  shift 6
	BEGIN  shift 7
	.  error


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : header_programa . lista_sentencias END  (1)
	programa : header_programa . lista_sentencias error  (2)

	error  shift 8
	ID  shift 9
	IF  shift 10
	TOS  shift 11
	OUTF  shift 12
	TYPEDEF  shift 13
	RET  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	SINGLE  shift 17
	UINTEGER  shift 18
	TAG  shift 19
	ID_STRUCT  shift 20
	.  error

	lista_sentencias  goto 21
	sentencia  goto 22
	sentencia_declarativa  goto 23
	sentencia_ejecutable  goto 24
	tipo  goto 25
	lista_variables  goto 26
	header_funcion  goto 27
	struct  goto 28
	asignacion  goto 29
	retorno  goto 30
	invocacion_funcion  goto 31
	seleccion_if  goto 32
	imprimir  goto 33
	repeat_until  goto 34
	goto  goto 35
	conversion_explicita  goto 36
	asignacion_simple  goto 37
	asignacion_multiple  goto 38


state 5
	header_programa : error BEGIN .  (5)

	.  reduce 5


state 6
	header_programa : ID error .  (4)

	.  reduce 4


state 7
	header_programa : ID BEGIN .  (3)

	.  reduce 3


state 8
	sentencia_declarativa : error . '(' parametro ')' BEGIN lista_sentencias END  (21)

	'('  shift 39
	.  error


state 9
	sentencia_declarativa : ID . ';'  (15)
	sentencia_declarativa : ID . error  (16)
	asignacion_simple : ID . ASIGNACION expresion ';'  (43)
	asignacion_simple : ID . ASIGNACION expresion error  (44)
	asignacion_simple : ID . ASIGNACION error ';'  (45)
	lista_variables : ID . ',' ID  (51)
	lista_variables : ID . ID  (55)
	lista_variables : ID . '.' ID ID '.' ID  (56)
	invocacion_funcion : ID . '(' expresion ')' ';'  (95)
	invocacion_funcion : ID . '(' error ')' ';'  (96)
	invocacion_funcion : ID . '(' expresion ')' error  (97)

	error  shift 40
	ID  shift 41
	ASIGNACION  shift 42
	';'  shift 43
	'('  shift 44
	'.'  shift 45
	','  shift 46
	.  error


state 10
	seleccion_if : IF . '(' condicion ')' THEN bloque_sentencias END_IF ';'  (98)
	seleccion_if : IF . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'  (99)
	seleccion_if : IF . '(' condicion ')' THEN bloque_sentencias END_IF error  (100)
	seleccion_if : IF . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF error  (101)
	seleccion_if : IF . condicion ')' THEN bloque_sentencias END_IF ';'  (102)
	seleccion_if : IF . '(' condicion THEN bloque_sentencias END_IF ';'  (103)
	seleccion_if : IF . condicion THEN bloque_sentencias END_IF ';'  (104)
	seleccion_if : IF . condicion ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'  (105)
	seleccion_if : IF . '(' condicion THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'  (106)
	seleccion_if : IF . condicion THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'  (107)
	seleccion_if : IF . '(' condicion ')' THEN error END_IF ';'  (108)
	seleccion_if : IF . '(' condicion ')' THEN error ELSE error END_IF ';'  (109)
	seleccion_if : IF . '(' condicion ')' THEN bloque_sentencias ';'  (110)
	seleccion_if : IF . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ';'  (111)

	error  shift 47
	ID  shift 48
	UINTEGER_CONST  shift 49
	SINGLE_CONST  shift 50
	HEXA_CONST  shift 51
	ID_STRUCT  shift 52
	'('  shift 53
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 56
	termino  goto 57
	factor  goto 58
	condicion  goto 59


state 11
	conversion_explicita : TOS . '(' expresion ')' ';'  (156)
	conversion_explicita : TOS . '(' expresion ')' error  (157)
	conversion_explicita : TOS . '(' error ')' ';'  (158)

	'('  shift 60
	.  error


state 12
	imprimir : OUTF . '(' expresion ')' ';'  (126)
	imprimir : OUTF . '(' CADENA ')' ';'  (127)
	imprimir : OUTF . '(' expresion ')' error  (128)
	imprimir : OUTF . '(' CADENA ')' error  (129)
	imprimir : OUTF . '(' ')' ';'  (130)
	imprimir : OUTF . '(' error ')' ';'  (131)

	'('  shift 61
	.  error


state 13
	struct : TYPEDEF . bloque_struct_multiple ID  (139)
	struct : TYPEDEF . bloque_struct_simple ID  (140)
	struct : TYPEDEF . bloque_struct_multiple error  (141)
	struct : TYPEDEF . bloque_struct_simple error  (142)

	STRUCT  shift 62
	SINGLE  shift 17
	UINTEGER  shift 18
	'<'  shift 63
	.  error

	tipo  goto 64
	bloque_struct_multiple  goto 65
	bloque_struct_simple  goto 66


state 14
	retorno : RET . '(' expresion ')' ';'  (64)
	retorno : RET . '(' expresion ')' error  (65)
	retorno : RET . '(' error ')' ';'  (66)

	'('  shift 67
	.  error


state 15
	repeat_until : REPEAT . bloque_sentencias UNTIL '(' condicion ')' ';'  (132)
	repeat_until : REPEAT . bloque_sentencias '(' condicion ')' ';'  (133)
	repeat_until : REPEAT . bloque_sentencias UNTIL '(' condicion ')' error  (134)
	repeat_until : REPEAT . bloque_sentencias UNTIL condicion ')' ';'  (135)
	repeat_until : REPEAT . bloque_sentencias UNTIL '(' condicion ';'  (136)
	repeat_until : REPEAT . bloque_sentencias UNTIL condicion ';'  (137)
	repeat_until : REPEAT . error UNTIL '(' condicion ')' ';'  (138)

	error  shift 68
	ID  shift 69
	BEGIN  shift 70
	IF  shift 10
	TOS  shift 11
	OUTF  shift 12
	RET  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	ID_STRUCT  shift 20
	.  error

	sentencia_ejecutable  goto 71
	lista_variables  goto 72
	asignacion  goto 29
	retorno  goto 30
	invocacion_funcion  goto 31
	seleccion_if  goto 32
	imprimir  goto 33
	repeat_until  goto 34
	goto  goto 35
	conversion_explicita  goto 36
	asignacion_simple  goto 37
	asignacion_multiple  goto 38
	bloque_sentencias  goto 73


state 16
	goto : GOTO . TAG ';'  (153)
	goto : GOTO . TAG error  (154)
	goto : GOTO . error ';'  (155)

	error  shift 74
	TAG  shift 75
	.  error


state 17
	tipo : SINGLE .  (29)

	.  reduce 29


state 18
	tipo : UINTEGER .  (28)

	.  reduce 28


state 19
	sentencia_declarativa : TAG . ';'  (11)
	sentencia_declarativa : TAG . error  (12)

	error  shift 76
	';'  shift 77
	.  error


state 20
	asignacion_simple : ID_STRUCT . '.' ID ASIGNACION expresion ';'  (46)
	asignacion_simple : ID_STRUCT . '.' ID ASIGNACION error ';'  (47)
	asignacion_simple : ID_STRUCT . '.' ID ASIGNACION expresion error  (48)
	lista_variables : ID_STRUCT . '.' ID ',' ID_STRUCT '.' ID  (52)

	'.'  shift 78
	.  error


state 21
	programa : header_programa lista_sentencias . END  (1)
	programa : header_programa lista_sentencias . error  (2)
	lista_sentencias : lista_sentencias . sentencia  (7)

	error  shift 79
	ID  shift 9
	END  shift 80
	IF  shift 10
	TOS  shift 11
	OUTF  shift 12
	TYPEDEF  shift 13
	RET  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	SINGLE  shift 17
	UINTEGER  shift 18
	TAG  shift 19
	ID_STRUCT  shift 20
	.  error

	sentencia  goto 81
	sentencia_declarativa  goto 23
	sentencia_ejecutable  goto 24
	tipo  goto 25
	lista_variables  goto 26
	header_funcion  goto 27
	struct  goto 28
	asignacion  goto 29
	retorno  goto 30
	invocacion_funcion  goto 31
	seleccion_if  goto 32
	imprimir  goto 33
	repeat_until  goto 34
	goto  goto 35
	conversion_explicita  goto 36
	asignacion_simple  goto 37
	asignacion_multiple  goto 38


state 22
	lista_sentencias : sentencia .  (6)

	.  reduce 6


state 23
	sentencia : sentencia_declarativa .  (8)

	.  reduce 8


state 24
	sentencia : sentencia_ejecutable .  (9)

	.  reduce 9


state 25
	sentencia_declarativa : tipo . lista_variables ';'  (10)
	sentencia_declarativa : tipo . ID ';'  (13)
	sentencia_declarativa : tipo . ID error  (14)
	sentencia_declarativa : tipo . lista_variables error  (24)
	header_funcion : tipo . FUN ID  (26)
	header_funcion : tipo . FUN error  (27)

	ID  shift 82
	FUN  shift 83
	ID_STRUCT  shift 84
	.  error

	lista_variables  goto 85


state 26
	sentencia_declarativa : lista_variables . ';'  (17)
	sentencia_declarativa : lista_variables . error  (25)
	asignacion_multiple : lista_variables . ASIGNACION lista_expresiones ';'  (49)
	asignacion_multiple : lista_variables . ASIGNACION lista_expresiones error  (50)
	lista_variables : lista_variables . ',' ID  (53)
	lista_variables : lista_variables . ',' ID_STRUCT '.' ID  (54)
	lista_variables : lista_variables . ID  (57)
	lista_variables : lista_variables . ID '.' ID  (58)

	error  shift 86
	ID  shift 87
	ASIGNACION  shift 88
	';'  shift 89
	','  shift 90
	.  error


state 27
	sentencia_declarativa : header_funcion . '(' parametro ')' BEGIN lista_sentencias END  (18)
	sentencia_declarativa : header_funcion . '(' parametro ')' BEGIN error END  (19)
	sentencia_declarativa : header_funcion . '(' error ')' BEGIN lista_sentencias END  (20)

	'('  shift 91
	.  error


state 28
	sentencia_declarativa : struct . ';'  (22)
	sentencia_declarativa : struct . error  (23)

	error  shift 92
	';'  shift 93
	.  error


state 29
	sentencia_ejecutable : asignacion .  (33)

	.  reduce 33


state 30
	sentencia_ejecutable : retorno .  (34)

	.  reduce 34


state 31
	sentencia_ejecutable : invocacion_funcion .  (35)

	.  reduce 35


state 32
	sentencia_ejecutable : seleccion_if .  (36)

	.  reduce 36


state 33
	sentencia_ejecutable : imprimir .  (37)

	.  reduce 37


state 34
	sentencia_ejecutable : repeat_until .  (38)

	.  reduce 38


state 35
	sentencia_ejecutable : goto .  (39)

	.  reduce 39


state 36
	sentencia_ejecutable : conversion_explicita .  (40)

	.  reduce 40


state 37
	asignacion : asignacion_simple .  (41)

	.  reduce 41


state 38
	asignacion : asignacion_multiple .  (42)

	.  reduce 42


state 39
	sentencia_declarativa : error '(' . parametro ')' BEGIN lista_sentencias END  (21)

	error  shift 94
	SINGLE  shift 17
	UINTEGER  shift 18
	.  error

	tipo  goto 95
	parametro  goto 96


state 40
	sentencia_declarativa : ID error .  (16)

	.  reduce 16


state 41
	lista_variables : ID ID .  (55)

	.  reduce 55


state 42
	asignacion_simple : ID ASIGNACION . expresion ';'  (43)
	asignacion_simple : ID ASIGNACION . expresion error  (44)
	asignacion_simple : ID ASIGNACION . error ';'  (45)

	error  shift 97
	ID  shift 48
	UINTEGER_CONST  shift 49
	SINGLE_CONST  shift 50
	HEXA_CONST  shift 51
	ID_STRUCT  shift 52
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 98
	termino  goto 57
	factor  goto 58


state 43
	sentencia_declarativa : ID ';' .  (15)

	.  reduce 15


state 44
	invocacion_funcion : ID '(' . expresion ')' ';'  (95)
	invocacion_funcion : ID '(' . error ')' ';'  (96)
	invocacion_funcion : ID '(' . expresion ')' error  (97)

	error  shift 99
	ID  shift 48
	UINTEGER_CONST  shift 49
	SINGLE_CONST  shift 50
	HEXA_CONST  shift 51
	ID_STRUCT  shift 52
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 100
	termino  goto 57
	factor  goto 58


state 45
	lista_variables : ID '.' . ID ID '.' ID  (56)

	ID  shift 101
	.  error


state 46
	lista_variables : ID ',' . ID  (51)

	ID  shift 102
	.  error


state 47
	expresion : error . '+' termino  (71)
	expresion : error . '-' termino  (72)
	expresion : error . '+' error  (73)
	expresion : error . '-' error  (74)
	termino : error . '*' factor  (80)
	termino : error . '/' factor  (81)
	termino : error . '*' error  (82)
	termino : error . '/' error  (83)
	condicion : error . comparador expresion  (118)

	MENOR_IGUAL  shift 103
	MAYOR_IGUAL  shift 104
	DISTINTO  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'='  shift 110
	'<'  shift 111
	'>'  shift 112
	.  error

	comparador  goto 113


state 48
	factor : ID .  (85)
	invocacion_funcion : ID . '(' expresion ')' ';'  (95)
	invocacion_funcion : ID . '(' error ')' ';'  (96)
	invocacion_funcion : ID . '(' expresion ')' error  (97)

	'('  shift 44
	error  reduce 85
	THEN  reduce 85
	MENOR_IGUAL  reduce 85
	MAYOR_IGUAL  reduce 85
	DISTINTO  reduce 85
	';'  reduce 85
	')'  reduce 85
	','  reduce 85
	'+'  reduce 85
	'-'  reduce 85
	'*'  reduce 85
	'/'  reduce 85
	'='  reduce 85
	'<'  reduce 85
	'>'  reduce 85


state 49
	factor : UINTEGER_CONST .  (87)

	.  reduce 87


state 50
	factor : SINGLE_CONST .  (88)

	.  reduce 88


state 51
	factor : HEXA_CONST .  (89)

	.  reduce 89


state 52
	factor : ID_STRUCT . '.' ID  (86)

	'.'  shift 114
	.  error


state 53
	seleccion_if : IF '(' . condicion ')' THEN bloque_sentencias END_IF ';'  (98)
	seleccion_if : IF '(' . condicion ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'  (99)
	seleccion_if : IF '(' . condicion ')' THEN bloque_sentencias END_IF error  (100)
	seleccion_if : IF '(' . condicion ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF error  (101)
	seleccion_if : IF '(' . condicion THEN bloque_sentencias END_IF ';'  (103)
	seleccion_if : IF '(' . condicion THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'  (106)
	seleccion_if : IF '(' . condicion ')' THEN error END_IF ';'  (108)
	seleccion_if : IF '(' . condicion ')' THEN error ELSE error END_IF ';'  (109)
	seleccion_if : IF '(' . condicion ')' THEN bloque_sentencias ';'  (110)
	seleccion_if : IF '(' . condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ';'  (111)

	error  shift 47
	ID  shift 48
	UINTEGER_CONST  shift 49
	SINGLE_CONST  shift 50
	HEXA_CONST  shift 51
	ID_STRUCT  shift 52
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 56
	termino  goto 57
	factor  goto 58
	condicion  goto 115


state 54
	factor : '-' . ID  (91)
	factor : '-' . ID_STRUCT '.' ID  (92)
	factor : '-' . SINGLE_CONST  (93)
	factor : '-' . error  (94)

	error  shift 116
	ID  shift 117
	SINGLE_CONST  shift 118
	ID_STRUCT  shift 119
	.  error


state 55
	factor : invocacion_funcion .  (90)

	.  reduce 90


state 56
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)
	expresion : expresion . '+' error  (69)
	expresion : expresion . '-' error  (70)
	condicion : expresion . comparador expresion  (116)
	condicion : expresion . error expresion  (117)
	condicion : expresion . comparador error  (119)

	error  shift 120
	MENOR_IGUAL  shift 103
	MAYOR_IGUAL  shift 104
	DISTINTO  shift 105
	'+'  shift 121
	'-'  shift 122
	'='  shift 110
	'<'  shift 111
	'>'  shift 112
	.  error

	comparador  goto 123


state 57
	expresion : termino .  (75)
	termino : termino . '*' factor  (76)
	termino : termino . '/' factor  (77)
	termino : termino . '*' error  (78)
	termino : termino . '/' error  (79)

	'*'  shift 124
	'/'  shift 125
	error  reduce 75
	THEN  reduce 75
	MENOR_IGUAL  reduce 75
	MAYOR_IGUAL  reduce 75
	DISTINTO  reduce 75
	';'  reduce 75
	')'  reduce 75
	','  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'='  reduce 75
	'<'  reduce 75
	'>'  reduce 75


state 58
	termino : factor .  (84)

	.  reduce 84


state 59
	seleccion_if : IF condicion . ')' THEN bloque_sentencias END_IF ';'  (102)
	seleccion_if : IF condicion . THEN bloque_sentencias END_IF ';'  (104)
	seleccion_if : IF condicion . ')' THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'  (105)
	seleccion_if : IF condicion . THEN bloque_sentencias ELSE bloque_sentencias END_IF ';'  (107)

	THEN  shift 126
	')'  shift 127
	.  error


state 60
	conversion_explicita : TOS '(' . expresion ')' ';'  (156)
	conversion_explicita : TOS '(' . expresion ')' error  (157)
	conversion_explicita : TOS '(' . error ')' ';'  (158)

	error  shift 128
	ID  shift 48
	UINTEGER_CONST  shift 49
	SINGLE_CONST  shift 50
	HEXA_CONST  shift 51
	ID_STRUCT  shift 52
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 129
	termino  goto 57
	factor  goto 58


state 61
	imprimir : OUTF '(' . expresion ')' ';'  (126)
	imprimir : OUTF '(' . CADENA ')' ';'  (127)
	imprimir : OUTF '(' . expresion ')' error  (128)
	imprimir : OUTF '(' . CADENA ')' error  (129)
	imprimir : OUTF '(' . ')' ';'  (130)
	imprimir : OUTF '(' . error ')' ';'  (131)

	error  shift 130
	ID  shift 48
	UINTEGER_CONST  shift 49
	SINGLE_CONST  shift 50
	HEXA_CONST  shift 51
	CADENA  shift 131
	ID_STRUCT  shift 52
	')'  shift 132
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 133
	termino  goto 57
	factor  goto 58


state 62
	bloque_struct_multiple : STRUCT . '<' lista_tipos '>' BEGIN lista_variables END  (143)
	bloque_struct_multiple : STRUCT . lista_tipos '>' BEGIN lista_variables END  (145)
	bloque_struct_multiple : STRUCT . '<' lista_tipos BEGIN lista_variables END  (146)
	bloque_struct_simple : STRUCT . '<' tipo '>' BEGIN ID END  (147)

	SINGLE  shift 17
	UINTEGER  shift 18
	'<'  shift 134
	.  error

	tipo  goto 135
	lista_tipos  goto 136


state 63
	bloque_struct_multiple : '<' . lista_tipos '>' BEGIN lista_variables END  (144)
	bloque_struct_simple : '<' . tipo '>' BEGIN ID END  (148)
	bloque_struct_simple : '<' . tipo BEGIN ID END  (150)

	SINGLE  shift 17
	UINTEGER  shift 18
	.  error

	tipo  goto 137
	lista_tipos  goto 138


state 64
	bloque_struct_simple : tipo . '>' BEGIN ID END  (149)

	'>'  shift 139
	.  error


state 65
	struct : TYPEDEF bloque_struct_multiple . ID  (139)
	struct : TYPEDEF bloque_struct_multiple . error  (141)

	error  shift 140
	ID  shift 141
	.  error


state 66
	struct : TYPEDEF bloque_struct_simple . ID  (140)
	struct : TYPEDEF bloque_struct_simple . error  (142)

	error  shift 142
	ID  shift 143
	.  error


state 67
	retorno : RET '(' . expresion ')' ';'  (64)
	retorno : RET '(' . expresion ')' error  (65)
	retorno : RET '(' . error ')' ';'  (66)

	error  shift 144
	ID  shift 48
	UINTEGER_CONST  shift 49
	SINGLE_CONST  shift 50
	HEXA_CONST  shift 51
	ID_STRUCT  shift 52
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 145
	termino  goto 57
	factor  goto 58


state 68
	repeat_until : REPEAT error . UNTIL '(' condicion ')' ';'  (138)

	UNTIL  shift 146
	.  error


state 69
	asignacion_simple : ID . ASIGNACION expresion ';'  (43)
	asignacion_simple : ID . ASIGNACION expresion error  (44)
	asignacion_simple : ID . ASIGNACION error ';'  (45)
	lista_variables : ID . ',' ID  (51)
	lista_variables : ID . ID  (55)
	lista_variables : ID . '.' ID ID '.' ID  (56)
	invocacion_funcion : ID . '(' expresion ')' ';'  (95)
	invocacion_funcion : ID . '(' error ')' ';'  (96)
	invocacion_funcion : ID . '(' expresion ')' error  (97)

	ID  shift 41
	ASIGNACION  shift 42
	'('  shift 44
	'.'  shift 45
	','  shift 46
	.  error


state 70
	bloque_sentencias : BEGIN . lista_sentencias_ejecutables END  (112)

	ID  shift 69
	IF  shift 10
	TOS  shift 11
	OUTF  shift 12
	RET  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	ID_STRUCT  shift 20
	.  error

	sentencia_ejecutable  goto 147
	lista_variables  goto 72
	asignacion  goto 29
	retorno  goto 30
	invocacion_funcion  goto 31
	seleccion_if  goto 32
	imprimir  goto 33
	repeat_until  goto 34
	goto  goto 35
	conversion_explicita  goto 36
	asignacion_simple  goto 37
	asignacion_multiple  goto 38
	lista_sentencias_ejecutables  goto 148


state 71
	bloque_sentencias : sentencia_ejecutable .  (113)

	.  reduce 113


state 72
	asignacion_multiple : lista_variables . ASIGNACION lista_expresiones ';'  (49)
	asignacion_multiple : lista_variables . ASIGNACION lista_expresiones error  (50)
	lista_variables : lista_variables . ',' ID  (53)
	lista_variables : lista_variables . ',' ID_STRUCT '.' ID  (54)
	lista_variables : lista_variables . ID  (57)
	lista_variables : lista_variables . ID '.' ID  (58)

	ID  shift 87
	ASIGNACION  shift 88
	','  shift 90
	.  error


state 73
	repeat_until : REPEAT bloque_sentencias . UNTIL '(' condicion ')' ';'  (132)
	repeat_until : REPEAT bloque_sentencias . '(' condicion ')' ';'  (133)
	repeat_until : REPEAT bloque_sentencias . UNTIL '(' condicion ')' error  (134)
	repeat_until : REPEAT bloque_sentencias . UNTIL condicion ')' ';'  (135)
	repeat_until : REPEAT bloque_sentencias . UNTIL '(' condicion ';'  (136)
	repeat_until : REPEAT bloque_sentencias . UNTIL condicion ';'  (137)

	UNTIL  shift 149
	'('  shift 150
	.  error


state 74
	goto : GOTO error . ';'  (155)

	';'  shift 151
	.  error


state 75
	goto : GOTO TAG . ';'  (153)
	goto : GOTO TAG . error  (154)

	error  shift 152
	';'  shift 153
	.  error


state 76
	sentencia_declarativa : TAG error .  (12)

	.  reduce 12


state 77
	sentencia_declarativa : TAG ';' .  (11)

	.  reduce 11


state 78
	asignacion_simple : ID_STRUCT '.' . ID ASIGNACION expresion ';'  (46)
	asignacion_simple : ID_STRUCT '.' . ID ASIGNACION error ';'  (47)
	asignacion_simple : ID_STRUCT '.' . ID ASIGNACION expresion error  (48)
	lista_variables : ID_STRUCT '.' . ID ',' ID_STRUCT '.' ID  (52)

	ID  shift 154
	.  error


state 79
	programa : header_programa lista_sentencias error .  (2)
	sentencia_declarativa : error . '(' parametro ')' BEGIN lista_sentencias END  (21)

	'('  shift 39
	$end  reduce 2


state 80
	programa : header_programa lista_sentencias END .  (1)

	.  reduce 1


state 81
	lista_sentencias : lista_sentencias sentencia .  (7)

	.  reduce 7


state 82
	sentencia_declarativa : tipo ID . ';'  (13)
	sentencia_declarativa : tipo ID . error  (14)
	lista_variables : ID . ',' ID  (51)
	lista_variables : ID . ID  (55)
	lista_variables : ID . '.' ID ID '.' ID  (56)

	error  shift 155
	ID  shift 41
	';'  shift 156
	'.'  shift 45
	','  shift 46
	.  error


state 83
	header_funcion : tipo FUN . ID  (26)
	header_funcion : tipo FUN . error  (27)

	error  shift 157
	ID  shift 158
	.  error


state 84
	lista_variables : ID_STRUCT . '.' ID ',' ID_STRUCT '.' ID  (52)

	'.'  shift 159
	.  error

